fix: remove custom letter spacing"

--- a/src/style.css
+++ b/src/style.css
@@ -108,7 +108,6 @@ body {
   font-weight: 400;
   background: white;
   margin: 50px 0 100px;
-  letter-spacing: .3px;
   color: #39424B;
 }
 
@@ -126,21 +125,18 @@ h1 {
   font-family: "Oswald", Helvetica, Arial, sans-serif;
   font-weight: 500;
   font-size: 40px;
-  letter-spacing: 1px;
 }
 
 h2 {
   font-family: "Oswald", Helvetica, Arial, sans-serif;
   font-weight: 300;
   font-size: 16px;
-  letter-spacing: .5px;
 }
 
 h3 {
   font-family: "Lato", Helvetica, Arial, sans-serif;
   font-weight: 300;
   font-size: 14px;
-  letter-spacing: .4px;
 }
 
 h3.bold {
